--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
       <div id="historyContainer"></div>
     </section>
 
-    <footer>© 2025 블록체인 웹사이트 - 역사</footer>
 
     <script>
       const events = [
@@ -159,5 +158,6 @@
         currentIndex = 0
       }
     </script>
+    <footer>© 2025 블록체인 웹사이트 - 구</footer>
   </body>
 </html>
