--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       }
 
       .event-block img {
+        width: 80px;
         display: block;
         margin-bottom: 10px;
       }
@@ -58,14 +59,6 @@
       .controls button:hover {
         background-color: #555;
       }
-
-      footer {
-        text-align: center;
-        padding: 1rem;
-        margin-top: 2rem;
-        background-color: #f0f0f0;
-        font-size: 14px;
-      }
     </style>
   </head>
   <body>
@@ -87,14 +80,13 @@
     </nav>
 
     <section class="section">
-      <h1>🕰️ 블록체인 역사 체험</h1>
+      <h1>🕰️ 블록체인 역사</h1>
       <div class="controls">
         <button onclick="addBlock()">📜 다음 사건 보기</button>
         <button onclick="resetBlocks()">🔄 초기화</button>
       </div>
       <div id="historyContainer"></div>
     </section>
-
 
     <script>
       const events = [
@@ -135,18 +127,13 @@
 
         const event = events[currentIndex]
         const container = document.getElementById('historyContainer')
-        const isEthereum = event.title.includes('이더리움')
 
         const block = document.createElement('div')
         block.className = 'event-block'
         block.innerHTML = `
-          <img src="${event.image}" alt="${event.title}" style="width: ${
-          isEthereum ? '80px' : '60px'
-        };" />
+          <img src="${event.image}" alt="${event.title}" />
           <p><strong>연도:</strong> ${event.year}</p>
-          <p><strong>사건:</strong> <a href="${event.link}" target="_blank">${
-          event.title
-        }</a></p>
+          <p><strong>사건:</strong> <a href="${event.link}" target="_blank">${event.title}</a></p>
           <p><strong>설명:</strong> ${event.desc}</p>
         `
         container.appendChild(block)
@@ -158,6 +145,6 @@
         currentIndex = 0
       }
     </script>
-    <footer>© 2025 블록체인 웹사이트 - 구</footer>
   </body>
 </html>
+
