--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       }
 
       .event-block img {
-        width: 80px;
         display: block;
         margin-bottom: 10px;
       }
@@ -59,6 +58,14 @@
       .controls button:hover {
         background-color: #555;
       }
+
+      footer {
+        text-align: center;
+        padding: 1rem;
+        margin-top: 2rem;
+        background-color: #f0f0f0;
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
@@ -80,13 +87,15 @@
     </nav>
 
     <section class="section">
-      <h1>🕰️ 블록체인 역사</h1>
+      <h1>🕰️ 블록체인 역사 체험</h1>
       <div class="controls">
         <button onclick="addBlock()">📜 다음 사건 보기</button>
         <button onclick="resetBlocks()">🔄 초기화</button>
       </div>
       <div id="historyContainer"></div>
     </section>
+
+    <footer>© 2025 블록체인 웹사이트 - 역사</footer>
 
     <script>
       const events = [
@@ -127,13 +136,18 @@
 
         const event = events[currentIndex]
         const container = document.getElementById('historyContainer')
+        const isEthereum = event.title.includes('이더리움')
 
         const block = document.createElement('div')
         block.className = 'event-block'
         block.innerHTML = `
-          <img src="${event.image}" alt="${event.title}" />
+          <img src="${event.image}" alt="${event.title}" style="width: ${
+          isEthereum ? '80px' : '60px'
+        };" />
           <p><strong>연도:</strong> ${event.year}</p>
-          <p><strong>사건:</strong> <a href="${event.link}" target="_blank">${event.title}</a></p>
+          <p><strong>사건:</strong> <a href="${event.link}" target="_blank">${
+          event.title
+        }</a></p>
           <p><strong>설명:</strong> ${event.desc}</p>
         `
         container.appendChild(block)
@@ -147,4 +161,3 @@
     </script>
   </body>
 </html>
-
