--- a/demo.html
+++ b/demo.html
@@ -68,6 +68,6 @@
       </p>
       <p>이로 인해 데이터의 위변조가 어렵고, 신뢰성을 높일 수 있습니다.</p>
     </div>
-    <footer>© 2025 블록체인 웹사이트 - 구</footer>
+    <footer>© 2025 블록체인 웹사이트 - 구조</footer>
   </body>
 </html>
