--- a/index.html
+++ b/index.html
@@ -1,149 +1,249 @@
+      }
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>블록체인 역사</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
+    <title>Hero effect–Magazine</title>
+    <link
+      rel="stylesheet"
+      href="https://public.codepenassets.com/css/normalize-5.0.0.min.css"
+    />
     <style>
-      body {
-        font-family: 'Arial', sans-serif;
-        margin: 0;
-        background-color: #f4f4f4;
-        color: #333;
+      .main-content {
+        min-height: 1000px;
       }
 
-      .section {
-        padding: 2rem;
-        max-width: 800px;
-        margin: auto;
+      .hero {
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        height: 100vh;
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+      }
+      @media screen and (min-width: 640px) {
+        .hero {
+          background-position: 50% 0;
+        }
+      }
+      .hero:after {
+        background-color: rgba(62, 92, 135, 0.5);
+        bottom: 0;
+        content: '';
+        left: -2000%;
+        position: absolute;
+        right: -2000%;
+        top: 0;
+        z-index: 1;
       }
 
-      .event-block {
-        background-color: #fff;
-        border: 2px solid #ccc;
-        border-radius: 10px;
-        padding: 1.5rem;
-        margin: 1.5rem 0;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      .hero-container {
+        box-sizing: border-box;
+        height: auto;
+        padding: 30px 50px;
+        position: relative;
+        z-index: 2;
+        transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+        transition-duration: 1.2s;
       }
-
-      .event-block img {
-        width: 80px;
-        display: block;
-        margin-bottom: 10px;
+      @media screen and (min-width: 640px) {
+        .hero-container {
+          height: 100%;
+        }
       }
-
-      .event-block a {
-        color: #1976d2;
-        text-decoration: underline;
-      }
-
-      .controls {
-        text-align: center;
-        margin-top: 2rem;
-      }
-
-      .controls button {
-        padding: 10px 16px;
-        font-size: 16px;
-        margin: 0 10px;
-        cursor: pointer;
-        background-color: #333;
+      .hero-container p {
         color: white;
-        border: none;
-        border-radius: 6px;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 13px;
+        font-weight: bold;
+        letter-spacing: 6px;
+        opacity: 0.8;
+        text-transform: uppercase;
+        text-align: left;
       }
 
-      .controls button:hover {
-        background-color: #555;
+      .hero-button {
+        background: rgba(255, 255, 255, 0.8);
+        color: #44575b;
+        font-size: 24px;
+        float: left;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-top: 30px;
+        padding: 20px 90px;
+        text-decoration: none;
+      }
+
+      .hero-title {
+        color: white;
+        font-family: 'Playfair Display', serif;
+        font-size: 17vw;
+        font-weight: 500;
+        letter-spacing: 1px;
+        line-height: 1.1;
+        margin: 5px 0;
+        text-align: left;
+        width: 85%;
+      }
+      @media screen and (min-width: 640px) {
+        .hero-title {
+          font-size: 10vw;
+        }
+      }
+
+      .main-content {
+        height: auto;
+        padding: 30px 50px;
+        position: relative;
+        width: 60%;
+      }
+
+      .main-content p {
+        color: #25373d;
+        font-family: 'Playfair Display', serif;
+        font-size: 18px;
+        line-height: 1.5;
+      }
+
+      @-webkit-keyframes fadeInLeft {
+        from {
+          opacity: 0;
+          transform: translate3d(-12px, 0, 0);
+        }
+        to {
+          opacity: 1;
+          transform: none;
+        }
+      }
+
+      @keyframes fadeInLeft {
+        from {
+          opacity: 0;
+          transform: translate3d(-12px, 0, 0);
+        }
+        to {
+          opacity: 1;
+          transform: none;
+        }
+      }
+      .fadeInLeft {
+        -webkit-animation-name: fadeInLeft;
+        animation-name: fadeInLeft;
+      }
+
+      .animate {
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+        -webkit-animation-timing-function: cubic-bezier(0.2, 0.3, 0.25, 0.9);
+        animation-timing-function: cubic-bezier(0.2, 0.3, 0.25, 0.9);
+      }
+
+      .delay {
+        -webkit-animation-delay: 1s;
+        animation-delay: 1s;
+      }
+
+      .delay-400 {
+        -webkit-animation-delay: 0.4s;
+        animation-delay: 0.4s;
+      }
+
+      .delay-500 {
+        -webkit-animation-delay: 0.5s;
+        animation-delay: 0.5s;
+      }
+
+      .delay-600 {
+        -webkit-animation-delay: 0.6s;
+        animation-delay: 0.6s;
+      }
+
+      .delay-700 {
+        -webkit-animation-delay: 0.7s;
+        animation-delay: 0.7s;
+      }
+
+      .delay-800 {
+        -webkit-animation-delay: 0.8s;
+        animation-delay: 0.8s;
       }
     </style>
+    <script>
+      /**
+       * Hero fade transition
+       */
+      window.HeroFade_Object = {};
+      (function (window, $, that) {
+        // Constructor.
+        that.init = function () {
+          that.cache();
+
+          if (that.meetsRequirements) {
+            that.bindEvents();
+          }
+        };
+
+        // Cache all the things.
+        that.cache = function () {
+          that.$c = {
+            window: $(window),
+            heroSelector: $('.hero'),
+          };
+        };
+
+        // Combine all events.
+        that.bindEvents = function () {
+          that.$c.window.on('load', that.doHero);
+        };
+
+        // Do we meet the requirements?
+        that.meetsRequirements = function () {
+          return that.$c.heroSelector.length;
+        };
+
+        // Watch the user scroll position and fade the hero
+        that.doHero = function () {
+          $(window).scroll(function () {
+            // transition the fade by dividing div height & opacity
+            $('.hero').css(
+              'opacity',
+              1 - $(window).scrollTop() / $('.hero').height()
+            );
+          });
+        };
+
+        // Engage!
+        $(that.init);
+      })(window, jQuery, window.HeroFade_Object);
+    </script>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">Blockchain</div>
-      <ul class="nav-links">
-        <li><a href="index.html">소개</a></li>
-        <li><a href="demo.html">구조</a></li>
-        <li><a href="tech.html">기술</a></li>
-        <li><a href="usage.html">활용</a></li>
-        <li><a href="about.html">제작정보</a></li>
-      </ul>
-      <div class="burger" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </nav>
+    <!-- partial:index.partial.html -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700|Roboto+Condensed:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-    <section class="section">
-      <h1>🕰️ 블록체인 역사</h1>
-      <div class="controls">
-        <button onclick="addBlock()">📜 다음 사건 보기</button>
-        <button onclick="resetBlocks()">🔄 초기화</button>
+    <section
+      class="hero image-as-background"
+      style="background-image: url('image/cover.jpg')"
+    >
+      <div class="hero-container">
+        <p class="animate fadeInLeft delay-400">Web programing</p>
+        <h1 class="hero-title animate fadeInLeft delay-600">BLOCK CHAIN</h1>
+        <a
+          href="index2.html"
+          class="hero-button animate fadeInLeft delay-800"
+          title="Click to see more"
+          >Click Me</a
+        >
       </div>
-      <div id="historyContainer"></div>
     </section>
-
-    <script>
-      const events = [
-        {
-          year: '2008년',
-          title: '비트코인 백서 발표',
-          desc: '사토시 나카모토가 블록체인 개념을 담은 논문 발표',
-          image: 'image/bitcoin.png',
-          link: 'https://blog.mexc.com/ko/who-is-satoshi-nakamoto/',
-        },
-        {
-          year: '2009년',
-          title: '비트코인 첫 거래',
-          desc: '실제로 비트코인을 채굴하고 거래가 시작됨',
-          image: 'image/bitcoin.png',
-          link: 'https://kr.cointelegraph.com/learn/articles/what-is-bitcoin',
-        },
-        {
-          year: '2015년',
-          title: '이더리움 등장',
-          desc: '스마트 계약이 가능한 블록체인 플랫폼 출현',
-          image: 'image/ethereum.png',
-          link: 'https://www.samsungsds.com/kr/insights/finance_series_ethereum.html',
-        },
-        {
-          year: '2020년 이후',
-          title: 'NFT, Web3 확산',
-          desc: '블록체인이 다양한 분야로 확장됨',
-          image: 'image/nft.png',
-          link: 'https://shindonga.donga.com/economy/article/all/13/3295096/1',
-        },
-      ]
-
-      let currentIndex = 0
-
-      function addBlock() {
-        if (currentIndex >= events.length) return
-
-        const event = events[currentIndex]
-        const container = document.getElementById('historyContainer')
-
-        const block = document.createElement('div')
-        block.className = 'event-block'
-        block.innerHTML = `
-          <img src="${event.image}" alt="${event.title}" />
-          <p><strong>연도:</strong> ${event.year}</p>
-          <p><strong>사건:</strong> <a href="${event.link}" target="_blank">${event.title}</a></p>
-          <p><strong>설명:</strong> ${event.desc}</p>
-        `
-        container.appendChild(block)
-        currentIndex++
-      }
-
-      function resetBlocks() {
-        document.getElementById('historyContainer').innerHTML = ''
-        currentIndex = 0
-      }
-    </script>
-    <footer>© 2025 블록체인 웹사이트 - 소개</footer>
   </body>
 </html>
